# BE-Avinash-Kumar-Thakur-00688

./: .env.sample  .env.template  .gitignore  pyproject.toml  requirements.txt
apps/cinemas/: admin.py  models.py
apps/cinemas/migrations/: 0001_initial.py
apps/movies/: admin.py  models.py
apps/movies/migrations/: 0001_initial.py
apps/users/: admin.py  manager.py  models.py
apps/users/migrations/: 0001_initial.py  0002_remove_user_username.py  0003_alter_user_options_alter_user_managers_and_more.py  0004_user_avatar.py  0005_user_role.py
config/: asgi.py  settings.py  urls.py  wsgi.py
